ISIS-2760: ensure that there is, though, some spacing after tabGroups.
(cherry picked from commit 46449938134957027f61d5317a33b2c2c17af1a8)

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
@@ -1205,6 +1205,6 @@ ul.navbar-wrap {
 	flex-wrap:wrap;
 }
 
-div.col > div.tabGroups {
-    margin-bottom: 10px;
+.tabGroups {
+    margin-bottom: 21px;
 }
